rust/oxide_generator_rs/tests/ui/fail_state_wrong_target.stderr
error: #[state] can only be applied to a struct or enum
 --> tests/ui/fail_state_wrong_target.rs:4:1
  |
4 | fn not_a_state() {}
  | ^^^^^^^^^^^^^^^^^^^
