rust/oxide_generator_rs/tests/ui/fail_state_wrong_target.rs
use oxide_generator_rs::state;

#[state]
fn not_a_state() {}

fn main() {}
